--- a/ios/TestFlight.xcodeproj/xcshareddata/xcschemes/TestFlight.xcscheme
+++ b/ios/TestFlight.xcodeproj/xcshareddata/xcschemes/TestFlight.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "TodoAppList.app"
-               BlueprintName = "TodoAppList"
-               ReferencedContainer = "container:TodoAppList.xcodeproj">
+               BuildableName = "TestFlight.app"
+               BlueprintName = "TestFlight"
+               ReferencedContainer = "container:TestFlight.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "TodoAppListTests.xctest"
-               BlueprintName = "TodoAppListTests"
-               ReferencedContainer = "container:TodoAppList.xcodeproj">
+               BuildableName = "TestFlightTests.xctest"
+               BlueprintName = "TestFlightTests"
+               ReferencedContainer = "container:TestFlight.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "TodoAppList.app"
-            BlueprintName = "TodoAppList"
-            ReferencedContainer = "container:TodoAppList.xcodeproj">
+            BuildableName = "TestFlight.app"
+            BlueprintName = "TestFlight"
+            ReferencedContainer = "container:TestFlight.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "TodoAppList.app"
-            BlueprintName = "TodoAppList"
-            ReferencedContainer = "container:TodoAppList.xcodeproj">
+            BuildableName = "TestFlight.app"
+            BlueprintName = "TestFlight"
+            ReferencedContainer = "container:TestFlight.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
