--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TodoAppList",
+  "name": "testflight",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,11 +7,14 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "transform-icons": "npx @svgr/cli --native ./transform-icon --out-dir ./src/assets/img/icon"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.25.9",
     "react": "18.3.1",
-    "react-native": "0.75.2"
+    "react-native": "0.75.2",
+    "react-native-svg": "^15.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,6 +24,7 @@
     "@react-native/eslint-config": "0.75.2",
     "@react-native/metro-config": "0.75.2",
     "@react-native/typescript-config": "0.75.2",
+    "@svgr/cli": "^8.1.0",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
