--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.25.9",
+    "@react-native-community/datetimepicker": "^8.3.0",
+    "@tanstack/react-query": "^5.71.5",
     "react": "18.3.1",
     "react-native": "0.75.2",
-    "react-native-svg": "^15.9.0"
+    "react-native-svg": "^15.9.0",
+    "styled-components": "^6.1.17",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
