--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.25.9",
+    "@gorhom/bottom-sheet": "^5.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@tanstack/react-query": "^5.71.5",
     "@types/styled-components-react-native": "^5.2.5",
     "react": "18.3.1",
     "react-dom": "^19.1.0",
     "react-native": "0.75.2",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-reanimated": "^3.17.2",
     "react-native-svg": "^15.9.0",
     "styled-components": "^6.1.17",
     "zustand": "^5.0.3"
