--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.3.1",
     "react-dom": "^19.1.0",
     "react-native": "0.75.2",
+    "react-native-calendars": "^1.1310.0",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "^3.17.2",
     "react-native-svg": "^15.9.0",
